WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260931
Timers are not coalesced during thermal throttling; should match low power mode
https://bugs.webkit.org/show_bug.cgi?id=260931
Summary
Timers are not coalesced during thermal throttling; should match low power mode
Tim Horton
Reported
2023-08-30 16:17:30 PDT
Timers are not coalesced during thermal throttling; should match low power mode
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-08-30 16:18:28 PDT
<
rdar://problem/112725366
>
Tim Horton
Comment 2
2023-08-30 16:21:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17257
EWS
Comment 3
2023-08-30 19:45:16 PDT
Committed
267480@main
(30884546903f): <
https://commits.webkit.org/267480@main
> Reviewed commits have been landed. Closing PR #17257 and removing active labels.
Diego Pino
Comment 4
2023-08-30 22:03:57 PDT
https://build.webkit.org/#/builders/596/builds/12635
WPE Ubuntu 20.04 started failing after this patch. There was a unified sources build error due to duplicated enum 'None' (conflicts with X Window headers). ``` FAILED: In file included from /usr/include/X11/Xlib.h:44, from /usr/include/EGL/eglplatform.h:128, from /usr/include/epoxy/egl_generated.h:11, from /usr/include/epoxy/egl.h:46, from ../../Source/WebCore/platform/graphics/epoxy/EpoxyEGL.h:28, from ../../Source/WebCore/platform/graphics/egl/GLContext.cpp:30, from WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-43.cpp:1: ../../Source/WebCore/platform/graphics/filters/FEConvolveMatrix.h:36:5: error: expected identifier before numeric constant 36 | None | ^~~~ ```
Diego Pino
Comment 5
2023-08-30 22:04:33 PDT
Re-opening for pull request
https://github.com/webkit/webkit/pull/17272
EWS
Comment 6
2023-08-30 23:56:02 PDT
Committed
267487@main
(07585903a5d3): <
https://commits.webkit.org/267487@main
> Reviewed commits have been landed. Closing PR #17272 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug